syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service.Command";

message MarkBackstitches {
    string pattern_id = 1;
    repeated BackstitchCoordinates backstitches = 2;
}

message UnmarkBackstitches {
    string pattern_id = 1;
    repeated BackstitchCoordinates backstitches = 2;
}

message MarkStitches {
    string pattern_id = 1;
    repeated StitchCoordinates stitches = 2;
}

message UnmarkStitches {
    string pattern_id = 1;
    repeated StitchCoordinates stitches = 2;
}

message BackstitchCoordinates {
    uint32 X1 = 1;
    uint32 Y1 = 2;
    uint32 X2 = 3;
    uint32 Y2 = 4;
}

message StitchCoordinates {
    uint32 X = 1;
    uint32 Y = 2;
}


